--- a/PgnParser/PgnParser.csproj
+++ b/PgnParser/PgnParser.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\PgnParser.Library\ChessUtilities.Library.csproj" />
+    <ProjectReference Include="..\ChessUtilities.Library\ChessUtilities.Library.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
